--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,17 +159,16 @@ body {
  *   Header stuff including logo, navigation, and phone number
  */
 .header {
-  background-color: rgba(255, 255, 255, 0.3); }
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 1em; }
 
 .navmenu a {
   color: #fff;
-  margin-right: 50px; }
-
-.navmenu a {
-  text-decoration: none; }
+  text-decoration: none;
+  font-size: 1.2em; }
 
 .navmenu a:hover {
-  color: #c4c4c4;
+  color: #000;
   text-decoration: underline; }
 
 .header h1 {
@@ -189,22 +188,20 @@ body {
   font-weight: 300;
   font-size: 1.2em; }
 
-@media screen and (max-width: 700px) {
-  .header {
-    padding: 1em; }
-
-  .branding h1, .logo {
-    display: inline-block; }
-
-  .call-us, .navmenu {
+@media screen and (max-width: 800px) {
+  .call-us, .navmenu, .branding {
     display: block; }
 
   .call-us {
-    font-size: 1.2em; }
+    font-size: 1.5em; }
 
   .blurb {
-    margin: 1em; } }
-@media screen and (min-width: 701px) {
+    margin: 1em; }
+
+  .navmenu {
+    display: flex;
+    justify-content: space-between; } }
+@media screen and (min-width: 801px) {
   .header {
     display: flex;
     justify-content: space-between; }
@@ -214,6 +211,9 @@ body {
 
   .navmenu {
     margin-top: 30px; }
+
+  .navmenu a {
+    margin-right: 50px; }
 
   .call-us {
     margin-top: 35px;
