--- a/assets/css/sass-modules/_hero.scss
+++ b/assets/css/sass-modules/_hero.scss
@@ -8,7 +8,8 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 683px;
+  min-height: 700px;
+  background-color: pink;
   color: #fff;
 }
 
@@ -56,6 +57,10 @@
 @media screen and (max-width: 800px) {
   .call-us, .navmenu, .branding {
     display: block;
+  }
+  
+  .logo, .branding h1 {
+    display: inline-block;
   }
   
   .call-us {
