--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,6 +143,27 @@ td, th {
 body {
   font-family: Open Sans, sans-serif; }
 
+p {
+  font-size: 1.2em;
+  font-weight: 300; }
+
+h1 {
+  font-size: 2.5em;
+  font-weight: 400; }
+
+h2 {
+  font-size: 2em;
+  font-weight: 300; }
+
+strong {
+  font-weight: 600; }
+
+@media screen and (max-width: 750px) {
+  section {
+    padding: 2em 1em; } }
+@media screen and (min-width: 751px) {
+  section {
+    padding: 50px 70px 1em; } }
 /**
  *   Hero image
  */
@@ -152,8 +173,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 700px;
-  background-color: pink;
+  min-height: 683px;
   color: #fff; }
 
 /**
@@ -161,12 +181,13 @@ body {
  */
 .header {
   background-color: rgba(255, 255, 255, 0.3);
-  padding: 1em; }
+  padding: 2em 1em 1em; }
 
 .navmenu a {
   color: #fff;
   text-decoration: none;
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  margin-right: 50px; }
 
 .navmenu a:hover {
   color: #000;
@@ -174,23 +195,21 @@ body {
 
 .header h1 {
   color: #fff;
-  font-size: 2.5em;
   line-height: 1; }
 
 .blurb h2 {
-  font-size: 2em;
-  font-weight: 300;
   line-height: 1; }
 
-.blurb strong {
-  font-weight: 600; }
-
 .blurb p {
-  font-weight: 300;
-  font-size: 1.2em; }
+  margin-bottom: 0;
+  padding-bottom: 1em; }
 
-@media screen and (max-width: 800px) {
-  .call-us, .navmenu, .branding {
+@media screen and (max-width: 450px) {
+  .navmenu {
+    display: flex;
+    justify-content: space-between; } }
+@media screen and (max-width: 750px) {
+  .call-us, .branding {
     display: block; }
 
   .logo, .branding h1 {
@@ -200,12 +219,8 @@ body {
     font-size: 1.5em; }
 
   .blurb {
-    margin: 1em; }
-
-  .navmenu {
-    display: flex;
-    justify-content: space-between; } }
-@media screen and (min-width: 801px) {
+    margin: 1em 1em 0 1em; } }
+@media screen and (min-width: 751px) {
   .header {
     display: flex;
     justify-content: space-between; }
@@ -216,21 +231,74 @@ body {
   .navmenu {
     margin-top: 30px; }
 
-  .navmenu a {
-    margin-right: 50px; }
-
   .call-us {
     margin-top: 35px;
     font-size: 1.5em; }
 
-  /**
-   *   Blurb on the front page
-   */
   .blurb {
     clear: both;
     display: block;
-    padding-top: 100px;
-    padding-left: 70px;
-    max-width: 650px; } }
+    max-width: 650px;
+    text-align: center;
+    margin: 70px auto 0; } }
+/**
+ *   Services
+ */
+.services {
+  background-color: #C1E3EA;
+  color: #222; }
+
+.services form {
+  padding-bottom: 50px; }
+
+.services label, .services input {
+  display: block; }
+
+.services input {
+  margin-bottom: 1em; }
+
+.services textarea {
+  max-width: 100%;
+  width: 500px;
+  height: 200px;
+  margin-top: 1em; }
+
+/**
+ *   Mobile size
+ */
+@media screen and (max-width: 750px) {
+  .servicesTextWrap h2 {
+    margin-top: 0; } }
+/**
+ *   Desktop size
+ */
+@media screen and (min-width: 751px) {
+  .services {
+    background-image: url(/somethingspecial/assets/img/lawnmower.jpg);
+    background-repeat: no-repeat;
+    background-position: 300px 120px;
+    min-height: 700px; }
+
+  .servicesTextWrap {
+    max-width: 450px; } }
+.photos {
+  background-color: #fff;
+  color: #414141;
+  margin-bottom: 2em; }
+
+.contact {
+  background-color: #8f3b1b;
+  color: #fff; }
+
+.contact .contact-icon, .contact p {
+  display: inline-block; }
+
+.contact p {
+  margin-left: 15px; }
+
+.contact-icon {
+  width: 50px;
+  height: 50px;
+  vertical-align: middle; }
 
 /*# sourceMappingURL=main.css.map */
