--- a/assets/css/sass-modules/_base.scss
+++ b/assets/css/sass-modules/_base.scss
@@ -3,3 +3,34 @@ $font-stack: Open Sans, sans-serif;
 body {
   font-family: $font-stack;
 }
+
+p {
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 2.5em;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: 300;
+}
+
+strong {
+  font-weight: 600;
+}
+
+@media screen and (max-width: 750px) {
+  section {
+    padding: 2em 1em;
+  }
+}
+
+@media screen and (min-width: 751px) {
+  section {
+    padding: 50px 70px 1em;
+  }
+}
