--- a/assets/css/sass-modules/_hero.scss
+++ b/assets/css/sass-modules/_hero.scss
@@ -8,8 +8,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 700px;
-  background-color: pink;
+  min-height: 683px;
   color: #fff;
 }
 
@@ -19,13 +18,14 @@
 
 .header {
   background-color: rgba(255,255,255,0.3);
-  padding: 1em;
+  padding: 2em 1em 1em;
 }
 
 .navmenu a {
   color: #fff;
   text-decoration: none;
   font-size: 1.2em;
+  margin-right: 50px;
 }
 
 .navmenu a:hover {
@@ -35,27 +35,27 @@
 
 .header h1 {
   color: #fff;
-  font-size: 2.5em;
   line-height: 1;
 }
 
 .blurb h2 {
-  font-size: 2em;
-  font-weight: 300;
   line-height: 1;
-}
-  
-.blurb strong {
-  font-weight: 600;
 }
 
 .blurb p {
-  font-weight: 300;
-  font-size: 1.2em;
+  margin-bottom: 0;
+  padding-bottom: 1em;
 }
 
-@media screen and (max-width: 800px) {
-  .call-us, .navmenu, .branding {
+@media screen and (max-width: 450px) {
+  .navmenu {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .call-us, .branding {
     display: block;
   }
   
@@ -68,16 +68,11 @@
   }
   
   .blurb {
-    margin: 1em;
-  }
-  
-  .navmenu {
-    display: flex;
-    justify-content: space-between;
+    margin: 1em 1em 0 1em;
   }
 }
 
-@media screen and (min-width: 801px) {
+@media screen and (min-width: 751px) {
   .header {
     display: flex;
     justify-content: space-between;
@@ -91,24 +86,16 @@
     margin-top: 30px;
   }
   
-  .navmenu a {
-    margin-right: 50px;
-  }
-  
   .call-us {
     margin-top: 35px;
     font-size: 1.5em;
   }
   
-  /**
-   *   Blurb on the front page
-   */
-  
   .blurb {
     clear: both;
     display: block;
-    padding-top: 100px;
-    padding-left: 70px;
     max-width: 650px;
+    text-align: center;
+    margin: 70px auto 0;
   }
 }
