--- a/assets/css/sass-modules/_photos.scss
+++ b/assets/css/sass-modules/_photos.scss
@@ -1,5 +1,8 @@
 .photos {
-  background-color: #fff;
-  color: #414141;
-  margin-bottom: 2em;
+	background-color: #c1e3ea;
+}
+
+.gallery {
+  background-color: #f5f5f4;
+  box-shadow: 1px 1px 3px 2px #666;
 }
