--- a/assets/css/sass-modules/_services.scss
+++ b/assets/css/sass-modules/_services.scss
@@ -3,12 +3,12 @@
  */
 
 .services {
-  background-color: #C1E3EA;
+  background-color: #f5f5f4;
   color: #222;
 }
 
 .services form {
-  padding-bottom: 50px;
+  margin-top: 2em;
 }
 
 .services label, .services input {
@@ -23,7 +23,6 @@
   max-width: 100%;
   width: 500px;
   height: 200px;
-  margin-top: 1em;
 }
 
 /**
@@ -41,10 +40,10 @@
  */
 @media screen and (min-width: 751px) {
   .services {
-    background-image: url(/somethingspecial/assets/img/lawnmower.jpg);
-    background-repeat: no-repeat;  
-    background-position: 300px 120px;
-    min-height: 700px;
+    background-image: url(/somethingspecial/assets/img/lawnmower-vector.png);
+    background-size: 30%;
+    background-position: 95% center;
+    background-repeat: no-repeat;
   }
   
   .servicesTextWrap {    
