--- a/assets/css/sass-modules/_contact.scss
+++ b/assets/css/sass-modules/_contact.scss
@@ -5,7 +5,7 @@
       rgba(black, 0.5),
       rgba(black, 0.5)
     ),
-    url(/somethingspecial/assets/img/hero-grass.jpg);
+    url(/assets/img/hero-grass.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
